--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
           node-version: '14'
       - name: install dependencies
         run: npm i
+      - name: lint
+        run: npm run lint
       - name: build web app
         run: npm run build:web
 
