only deploy master

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy
 on:
   push:
     branches:
-      - test/deploy
+      - master
 
 jobs:
   remote:
@@ -17,7 +17,7 @@ jobs:
       - uses: webfactory/ssh-agent@v0.5.3
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-      - name: deploy via ansible
+      - name: build and deploy
         uses: dawidd6/action-ansible-playbook@v2
         with:
           playbook: deploy.yml
