--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
           options: -v
           inventory: |
             [pollofeed]
-            pollofeed.com ansible_user=joe
+            pollofeed.com ansible_user=${{secrets.SSH_USER}}
