--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,10 @@
 name: Deploy
 
 on:
+  workflow_dispatch:
   push:
     branches:
-      - test/deploy
+      - master
 
 jobs:
   remote:
@@ -18,11 +19,9 @@ jobs:
         with:
           playbook: deploy.yml
           key: ${{secrets.SSH_PRIVATE_KEY}}
-          #          known_hosts: ${{env.SSH_KNOWN_HOSTS}}
           directory: playbooks
-          #          vault_password: test
           requirements: requirements.yml
           options: -v
           inventory: |
             [pollofeed]
-            pollofeed.com ansible_user=joe
+            pollofeed.com ansible_user=${{ secrets.SSH_USER }}
