--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: web app
+name: build
 
 on: [push, pull_request]
 jobs:
@@ -12,7 +12,5 @@ jobs:
           node-version: '12'
       - name: install dependencies
         run: npm i
-      - name: lint
-        run: npm run lint
       - name: build web app
         run: npm run build:web
