--- a/playbooks/roles/pollofeed/tasks/main.yml
+++ b/playbooks/roles/pollofeed/tasks/main.yml
@@ -33,7 +33,7 @@
 
 
 - name: start pollofeed
-  command: docker-compose up --build -d fileserver
+  command: docker-compose up -d fileserver
   tags: start
   args:
     chdir: "./{{APP_DIR}}"
