--- a/playbooks/requirements.yml
+++ b/playbooks/requirements.yml
@@ -1,6 +1,12 @@
----
-- collections:
+# https://docs.ansible.com/ansible/latest/user_guide/collections_using.html
+roles:
+  # Install a role from Ansible Galaxy.
+  - name: geerlingguy.pip
+  - name: geerlingguy.docker
+#    version: 1.9.6
+
+collections:
+  # Install a collection from Ansible Galaxy.
   - name: ansible.posix
-- roles:
-    - name: geerlingguy.pip
-    - name: geerlingguy.docker
+#    version: 0.9.3
+    source: https://galaxy.ansible.com
