update stream url and add ids for health checks

--- a/playbooks/roles/pollofeed/tasks/main.yml
+++ b/playbooks/roles/pollofeed/tasks/main.yml
@@ -7,7 +7,7 @@
     state: directory
 
 - name: copy ui
-  tags: [start,files]
+  tags: [start,files, copy_ui]
   copy:
     src: ../dist/spa
     dest: ~/fileserver/
