--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "quasar dev",
     "lint": "eslint --ext .js,.vue ./",
     "build:web": "quasar build",
+    "cypress": "cypress open",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
     "@quasar/app": "^3.0.0",
+    "cypress": "^9.2.0",
     "dotenv": "^10.0.0",
     "electron": "^15.0.0",
     "electron-packager": "^15.2.0",
