--- a/.github/workflows/invoice.yml
+++ b/.github/workflows/invoice.yml
@@ -2,8 +2,8 @@ name: build
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 * * * *"
+#   schedule:
+#     - cron: "0 * * * *"
 jobs:
   lint:
     runs-on: ubuntu-latest
