--- a/.github/workflows/invoice.yml
+++ b/.github/workflows/invoice.yml
@@ -1,9 +1,9 @@
-name: build
+name: invoice
 
 on:
   workflow_dispatch:
-#   schedule:
-#     - cron: "0 * * * *"
+   schedule:
+     - cron: "0 * * * *"
 jobs:
   lint:
     runs-on: ubuntu-latest
