--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "@pollofeed",
   "scripts": {
     "build": "quasar build",
-    "lint": "vue-cli-service lint",
+    "lint_broken": "vue-cli-service lint",
+    "lint": "eslint --fix --ext .js,.vue src",
     "build:pwa": "quasar build -m pwa",
     "build:web": "quasar build",
     "cypress": "cypress open",
@@ -37,9 +38,10 @@
     "dotenv": "^10.0.0",
     "electron": "^19.0.3",
     "electron-packager": "^15.2.0",
-    "eslint": "^6.7.2",
+    "eslint": "^8.17.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "lint-staged": "^9.5.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "prettier": "^2.2.1",
