--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0",
+    "vue-social-sharing": "^4.0.0-alpha4",
     "vuex": "^4.0.1"
   },
   "devDependencies": {
