udpate btn, check ci test

--- a/.github/workflows/invoice.yml
+++ b/.github/workflows/invoice.yml
@@ -17,5 +17,5 @@ jobs:
         run: npm i
       - name: npm run cypress:invoice
         env:
-          CYPRESS_HOST: https://pollofeed.com
+          CYPRESS_BASE_URL: https://pollofeed.com
         run: npm run cypress:invoice
