--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "quasar": "^2.0.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
+    "vue-qr": "^4.0.9",
     "vue-router": "^4.0.0",
     "vue-social-sharing": "^4.0.0-alpha4",
     "vuex": "^4.0.1"
@@ -53,14 +54,14 @@
     "electron": "^19.0.3",
     "electron-packager": "^15.2.0",
     "eslint": "^8.17.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "lint-staged": "^9.5.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "prettier": "^2.2.1",
-    "workbox-webpack-plugin": "^6.5.3",
-    "eslint-plugin-cypress": "^2.12.1"
+    "workbox-webpack-plugin": "^6.5.3"
   },
   "browserslist": [
     "last 10 Chrome versions",
