--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@vue/cli-plugin-eslint": "~4.5.4",
     "@vue/devtools": "^5.3.4",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "cypress": "^11.2.0",
+    "cypress": "12.2.0",
     "dotenv": "^10.0.0",
     "electron": "^19.0.3",
     "electron-packager": "^15.2.0",
