--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cypress:open": "CYPRESS_BASE_URL=http://localhost:8080 cypress open",
     "cypress:openprod": "CYPRESS_BASE_URL=https://pollofeed.com cypress open",
     "cypress:invoice": "CYPRESS_BASE_URL=http://localhost:8080 cypress run --spec test/cypress/e2e/pollofeed/invoice.cy.js",
-    "cypress:invoiceprod": "CYPRESS_BASE_URL=https://pollofeed.com cypress run --spec test/cypress/e2e/pollofeed/invoice.cy.js",
+    "cypress:invoiceprod": "CYPRESS_BASE_URL=https://pollofeed.com cypress run --video=false --spec test/cypress/e2e/pollofeed/invoice.cy.js",
     "dev": "quasar dev",
     "dev:electron": "quasar dev -m electron",
     "test": "echo \"See package.json => scripts for available tests.\" && exit 0",
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.18.2",
     "@quasar/app": "^3.3.3",
+    "@quasar/quasar-app-extension-testing-e2e-cypress": "^5.0.0-beta.10",
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/devtools": "^5.3.4",
     "@vue/eslint-config-prettier": "^6.0.0",
